tests/b_invalid/checking_trait.out
tests/b_invalid/checking_trait.ri:24:14: error: type `int` does not implement trait `ToStr`
   24 |     my_print(1); // FAIL
      |              ^
      = note: in argument `v` of procedure `my_print`
rivetc: error: could not compile module `checking_trait`, aborting due to previous error